# claude-overnight

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  job_idea.yml
.github/workflows/: ci.yml  publish.yml
commands/: queue.md
docs/: configuration.md  design.md  how-it-works.md
skills/claude-overnight/: SKILL.md
src/overnight/: __init__.py  cli.py  config.py  install.py  limits.py  notify.py  paths.py  runner.py  store.py  trust.py
tests/: conftest.py  test_config.py  test_followup.py  test_install.py  test_limits.py  test_repo_jobs.py  test_runner.py  test_store.py
